--- a/css/custom.css
+++ b/css/custom.css
@@ -37,11 +37,17 @@
 
 }
 
-@media only screen and (max-width: 1197px) and (min-width: 768px) {
-  .header_foxes {
-    max-width: 350px;
+  @media only screen and (max-width: 1197px) and (min-width: 768px) {
+    .header_foxes {
+      max-width: 350px;
+    }
   }
-}
+
+  @media only screen and (max-width: 768px) {
+    .header_foxes {
+      display: none;
+    }
+  }
 
 /* .main-header */
 .main-header_title {
@@ -89,19 +95,23 @@
   background: #fff;
 }
 
-/* svgs */
-.planet-surface-svg {
-  z-index: 1 !important;
-  animation-name: floating;
-  -webkit-animation-name: floating;
-  animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-duration: 4s;
-  -webkit-backface-visibility: hidden;
 
+
+@media only screen and (min-width: 768px) {
+  /* svgs */
+  .planet-surface-svg {
+    z-index: 1 !important;
+    animation-name: floating;
+    -webkit-animation-name: floating;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-duration: 4s;
+    -webkit-backface-visibility: hidden;
+  }
 }
+
 
 @keyframes floating {
   0% {
