hide stars on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -44,7 +44,7 @@
   }
 
   @media only screen and (max-width: 768px) {
-    .header_foxes {
+    .header_foxes, .header_stars {
       display: none;
     }
   }
