--- a/css/custom.css
+++ b/css/custom.css
@@ -3,6 +3,14 @@
   @apply .p-1;
 }
 
+.nunito-bold {
+  font-family: 'Nunito';
+  font-weight: 800
+}
+.nunito-regular {
+  font-family: 'Nunito';
+  font-weight: 400
+}
 /* stars for .main-header */
 .starlight {
   /* background: #273036; */
@@ -51,7 +59,7 @@
 
 /* .main-header */
 .main-header_title {
-  font-family: "caveat";
+  font-family: "Reenie Beanie";
   color: #eee;
   padding: 0 2rem;
   font-size: 5rem;
